--- a/_config.yml
+++ b/_config.yml
@@ -10,25 +10,23 @@ url: "https://alimarques.github.io/" # the base hostname & protocol for your sit
 social:
   name: Ali Marques
   links:
-    - https://www.linkedin.com/in/ali.marques
+    - https://www.linkedin.com/in/ali-marques
     - https://github.com/alimarques
 
 # THEME SETTINGS
 navigation: # Navigation links
   - {name: 'Home', link: '/'}
-  - {name: 'About', link: '/about'}
-  - {name: 'Contact', link: '/contact'}
+  - {name: 'Sobre', link: '/sobre'}
+  - {name: 'Contato', link: '/contato'}
 
 tagline: >
-  Dados & Tecnologia
+  Dados, Tecnologia e ideias
 
 hero_img: posts/sleek_lg.jpg # Main background image: use the path from /assets/img/ => This will output /assets/img/posts/sleek_lg.jpg
 
 email: ali.mrques@gmail.com # email for form submission
 
-github_username:  alimarques # replace with your_github_username or comment to remove link from footer
-
-# google_tag_manager: GTM-XXXXXXX # Uncomment to enable GTM. Replace GTM-XXXXXXX with your GTM container ID
+github_username: alimarques # replace with your_github_username or comment to remove link from footer
 
 service_worker: true
 
